--- a/config/local.yml
+++ b/config/local.yml
@@ -1,7 +1,7 @@
 env: local
 http:
   #  host: 0.0.0.0
-  host: 127.0.0.1
+  host: 192.168.1.102
   port: 8000
 security:
   api_sign:
@@ -21,7 +21,7 @@ data:
   #      driver: postgres
   #      dsn: host=localhost user=gorm password=gorm dbname=gorm port=9920 sslmode=disable TimeZone=Asia/Shanghai
   redis:
-    addr: 127.0.0.1:6350
+    addr: 127.0.0.1:6379
     password: ""
     db: 0
     read_timeout: 0.2s
@@ -35,3 +35,7 @@ log:
   max_age: 7
   max_size: 1024
   compress: true
+
+cpp: 
+  host: "192.168.1.110"
+  port: "10087"
